Add entity: Student and do some action with it (insert, delete, update.....)
Signed-off-by: Doan Du <du.doan@everrise.asia>

--- a/ersample/src/main/resources/application.properties
+++ b/ersample/src/main/resources/application.properties
@@ -10,7 +10,7 @@ errors.minlength={0}\u306e\u9577\u3055\u304c\u6700\u5c0f\u5024({1})\u672a\u6e80\
 errors.maxbytelength={0}\u306e\u30d0\u30a4\u30c8\u9577\u304c\u6700\u5927\u5024({1})\u3092\u8d85\u3048\u3066\u3044\u307e\u3059\u3002
 errors.minbytelength={0}\u306e\u30d0\u30a4\u30c8\u9577\u304c\u6700\u5c0f\u5024({1})\u672a\u6e80\u3067\u3059\u3002
 errors.range={0}\u306f{1}\u3068{2}\u306e\u9593\u3067\u306a\u3051\u308c\u3070\u3044\u3051\u307e\u305b\u3093\u3002
-errors.required={0}\u306f\u5fc5\u9808\u3067\u3059\u3002
+errors.required={0} is required.
 errors.byte={0}\u306f\u30d0\u30a4\u30c8\u3067\u306a\u3051\u308c\u3070\u3044\u3051\u307e\u305b\u3093\u3002
 errors.date={0}\u306f\u65e5\u4ed8\u3067\u306a\u3051\u308c\u3070\u3044\u3051\u307e\u305b\u3093
 errors.double={0}\u306f\u500d\u7cbe\u5ea6\u5b9f\u6570\u3067\u306a\u3051\u308c\u3070\u3044\u3051\u307e\u305b\u3093\u3002
@@ -54,6 +54,7 @@ login.error.invalidIdOrPassword=\u30ed\u30b0\u30a4\u30f3ID\u307e\u305f\u306f\u30
 top.title=\u30c8\u30c3\u30d7
 top.headline=\u30c8\u30c3\u30d7
 top.menu.userList=\u30e6\u30fc\u30b6\u30fc\u4e00\u89a7
+top.menu.studentList=List of students
 
 #top/prePostOnly
 prePostOnly.title=POST\u306e\u307f\u5b9f\u9a13
@@ -73,6 +74,14 @@ userList.table.header.name=\u540d\u524d
 userList.nodata.message=\u691c\u7d22\u5bfe\u8c61\u30c7\u30fc\u30bf\u304c\u3042\u308a\u307e\u305b\u3093\u3002
 userList.navi.userAdd=\u30e6\u30fc\u30b6\u30fc\u65b0\u898f\u4f5c\u6210
 
+#studentList/index.jsp
+studentList.title=List of students
+studentList.headline=List of students
+studentList.navi.studentAdd=New student
+studentList.searchform.condition.label=Search (by name)
+studentList.searchform.submit.button=Search
+studentList.table.header.id=ID
+studentList.table.header.name=Student Name
 
 #userDetail/index
 userDetail.title=\u30e6\u30fc\u30b6\u30fc\u8a73\u7d30
@@ -82,6 +91,16 @@ userDetail.table.header.name=\u540d\u524d
 userDetail.table.header.loginid=\u30ed\u30b0\u30a4\u30f3ID
 userDetail.navi.useredit=\u7de8\u96c6
 userDetail.navi.userList=\u30e6\u30fc\u30b6\u30fc\u4e00\u89a7
+
+#studentDetail/index
+studentDetail.title=Student Detail
+studentDetail.headline=Student Detail
+studentDetail.navi.studentedit=Edit
+studentDetail.navi.studentList=Back to List of students
+studentDetail.table.header.id=ID
+studentDetail.table.header.name=Student Name
+studentDetail.table.header.email=Email
+studentDetail.table.header.address=Address
 
 #userAdd/index
 userAdd.title=\u30e6\u30fc\u30b6\u30fc\u65b0\u898f
@@ -93,9 +112,17 @@ userAdd.input.password.label=\u30d1\u30b9\u30ef\u30fc\u30c9
 userAdd.input.repassword.label=\u30d1\u30b9\u30ef\u30fc\u30c9\u78ba\u8a8d
 userAdd.errors.passwordConfirm=\u30d1\u30b9\u30ef\u30fc\u30c9\u78ba\u8a8d\u304c\u4e00\u81f4\u3057\u307e\u305b\u3093
 userAdd.errors.duplicateLoginId=\u3053\u306e\u30ed\u30b0\u30a4\u30f3ID\u306f\u4f7f\u3048\u307e\u305b\u3093
-userAdd.submit.button=\u4f5c\u6210
 userAdd.navi.userList=\u30e6\u30fc\u30b6\u30fc\u4e00\u89a7\u3078\u623b\u308b
+userAdd.submit.button=\u4f5c\u6210
 
+#studentAdd/index
+studentAdd.title=New student
+studentAdd.headline=New student
+studentAdd.navi.studentList=Back to list students
+studentAdd.input.name.label=Student Name
+studentAdd.input.address.label=Address
+studentAdd.input.email.label=Email
+studentAdd.submit.button=Create new student
 
 #userEdit/index
 userEdit.title=\u30e6\u30fc\u30b6\u30fc\u7de8\u96c6
@@ -108,13 +135,20 @@ userEdit.input.repassword.label=\u30d1\u30b9\u30ef\u30fc\u30c9\u78ba\u8a8d
 userEdit.errors.passwordConfirm=\u30d1\u30b9\u30ef\u30fc\u30c9\u78ba\u8a8d\u304c\u4e00\u81f4\u3057\u307e\u305b\u3093
 userEdit.errors.duplicateLoginId=\u3053\u306e\u30ed\u30b0\u30a4\u30f3ID\u306f\u4f7f\u3048\u307e\u305b\u3093
 userEdit.submit.button=\u66f4\u65b0
+
+#studentEdit/index
+studentEdit.title=Edit the student
+studentEdit.headline=Edit the student
+studentEdit.input.studentid.label=ID
+studentEdit.input.name.label=Student Name
+studentEdit.input.address.label=Address
+studentEdit.input.email.label=Email
+studentEdit.submit.button=Update
+
 #userEdit/noUser
 userEdit.errors.nouser=\u30e6\u30fc\u30b6\u30fc\u304c\u5b58\u5728\u3057\u307e\u305b\u3093
 userEdit.navi.userlist=\u30e6\u30fc\u30b6\u30fc\u4e00\u89a7\u3078\u623b\u308b
 
-
-
-
-
-
-
+#studentEdit/noUser
+studentEdit.errors.nostudent=The student is not exist
+studentEdit.navi.studentlist=Back to List of students
