My part(not complete)

--- a/ersample/src/main/resources/application.properties
+++ b/ersample/src/main/resources/application.properties
@@ -55,6 +55,7 @@ top.title=\u30c8\u30c3\u30d7
 top.headline=\u30c8\u30c3\u30d7
 top.menu.userList=\u30e6\u30fc\u30b6\u30fc\u4e00\u89a7
 top.menu.studentList=List of students
+top.menu.product.list=List of products
 
 #top/prePostOnly
 prePostOnly.title=POST\u306e\u307f\u5b9f\u9a13
@@ -152,3 +153,6 @@ userEdit.navi.userlist=\u30e6\u30fc\u30b6\u30fc\u4e00\u89a7\u3078\u623b\u308b
 #studentEdit/noUser
 studentEdit.errors.nostudent=The student is not exist
 studentEdit.navi.studentlist=Back to List of students
+
+#product/list
+product.title=ptitle
