--- a/ersample/src/main/resources/application.properties
+++ b/ersample/src/main/resources/application.properties
@@ -23,6 +23,7 @@ errors.email={0}\u306f\u30e1\u30fc\u30eb\u30a2\u30c9\u30ec\u30b9\u3068\u3057\u30
 errors.url={0}\u306fURL\u3068\u3057\u3066\u4e0d\u6b63\u3067\u3059\u3002
 errors.upload.size=\u4e0a\u9650\u304c{1}\u30d0\u30a4\u30c8\u306a\u306e\u306b\u5b9f\u969b\u306f{0}\u30d0\u30a4\u30c8\u3060\u3063\u305f\u306e\u3067\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u3067\u304d\u307e\u305b\u3093\u3067\u3057\u305f\u3002
 errors.token=\u4e0d\u6b63\u306a\u30ea\u30af\u30a8\u30b9\u30c8\u3067\u3059\u3002
+errors.delete=Please choose the student that you want to delete
 
 #header login
 header.loggedin.message01=\u30d8\u30c3\u30c0\u30fc\u30ed\u30b0\u30a4\u30f3\u6e08
@@ -74,6 +75,7 @@ userList.table.header.id=ID
 userList.table.header.name=\u540d\u524d
 userList.nodata.message=\u691c\u7d22\u5bfe\u8c61\u30c7\u30fc\u30bf\u304c\u3042\u308a\u307e\u305b\u3093\u3002
 userList.navi.userAdd=\u30e6\u30fc\u30b6\u30fc\u65b0\u898f\u4f5c\u6210
+
 
 #studentList/index.jsp
 studentList.title=List of students
