New function product

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-ersample/.settings/
-ersample/target/
-ersample/work/
-ersample/.classpath
-ersample/.tomcatplugin
-ersample/src/main/webapp/WEB-INF/classes/
-ersample/src/main/webapp/WEB-INF/lib/
-ersample/src/main/resources/jdbc.dicon
+/ersample/.settings/
+/ersample/target/
+/ersample/work/
+/ersample/.classpath
+/ersample/.tomcatplugin
+/ersample/src/main/webapp/WEB-INF/classes/
+/ersample/src/main/webapp/WEB-INF/lib/
+/ersample/src/main/resources/jdbc.dicon
