--- a/ersample/src/main/resources/application.properties
+++ b/ersample/src/main/resources/application.properties
@@ -155,4 +155,9 @@ studentEdit.errors.nostudent=The student is not exist
 studentEdit.navi.studentlist=Back to List of students
 
 #product/list
-product.title=ptitle
+product.list.title=Ptitle
+product.list.error.limit.require=Limit must be an integer
+product.list.error.limit.invalid={0} must be an integer
+product.list.error.page=Page must be an integer
+product.list.table.head.id=Product Id
+product.list.table.head.name=Product Name
